# ContinualLearning_Drone

./: README.md  unicycle.pptx
matlab/: controller_dnn.m  controller_pid.m  data_engineering.m  learn_inverse.m  main.m  show.m  unicycle.m  unicycle_dynamic.m
matlab/data/: dnn.mat  dnn_32x32.mat  dnn_64x64.mat  samples_step.mat
python/: README.md  data_engineering.py  dnn.py  dnn_dynamics.py  dnn_dynamics_test.py  dnn_kinematics.py  dnn_kinematics_test.py  inverse_dynamics.py  inverse_kinematics.py  learn_inverse_dynamics.py  learn_inverse_kinematics.py  main.py  main_dynamics.py  main_kinematics.py  pid.py  pid_dynamics.py  results_collection_kinematics.py  save_data.py  show.py  test_dnn_dynamics_divided.py  unicycle.py  unicycle_dynamics.py  unicycle_kinematics.py
python/cl/: agem.py  avalanche_test.py  base.py  buffer.py  cache.py  er.py  ewc.py  exp_replay.py  gdumb.py  lwf.py  onn.py  utils.py
python/data/: dataset_unicycle_kinematics_random_bound100_smaller.csv  dataset_unicycle_kinematics_random_bound100_smaller1.csv  dataset_unicycle_kinematics_random_bound20_100_smaller.csv  dataset_unicycle_kinematics_random_smaller.csv  dataset_unicycle_kinematics_random_smaller1.csv  samples_step.csv  samples_step.txt
ros/: CMakeLists.txt  package.xml
ros/scripts/: unicycle_node.py
ros2/: package.xml  setup.py
ros2/unicycle_control/: unicycle_node.py
sphere/: dnn.py  dnn_simple.py  dnn_simple_test.py  learn_inverse.py  learn_inverse_simple.py  main.py  main_simple.py  pid.py  pid_simple.py  save_data.py  show.py  sphere.py  sphere_simple.py
(+85 files in other folders)
