<?xml version="1.0"?>
<package format="2">
  <name>unicycle_control</name>
  <version>0.0.0</version>
  <description>The unicycle_control package</description>

  <maintainer email="student@todo.todo">student</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>

</package>
